# Bount-Graphics

./: .env.cmake.example  .gitignore  .gitmodules  CMakeLists.txt  Utils.cmake
.cmake/: commands.cmake
examples/Window/src/: main.cpp
impl/Bount/Event/: Base.cpp
include/Bount/Event/: Base.hpp  Dispatcher.hpp  Event.hpp  Manager.hpp  Precompiled.hpp  StandardMacros.hpp
include/Bount/GL/: Event.hpp  Layer.hpp  Lib-Macro.hpp  Mesh.hpp  Placeholder.hpp  Precompiled.hpp  Shader.hpp  StandardMacros.hpp  Subsystem.hpp  System.hpp  Vertex.hpp  Window.hpp
include/Bount/Graphics/: Precompiled.hpp  StandardMacros.hpp
include/Bount/Window/: Precompiled.hpp  StandardMacros.hpp  Subsystem.hpp
module/Bount/Event/: Base.cppm  Dispatcher.cppm  Event.cppm  Manager.cppm
module/Bount/Graphics/: Graphics.cppm  Layer.cppm  Mesh.cppm  Shader.cppm  Subsystem.cppm  Vertex.cppm
module/Bount/Window/: Subsystem.cppm  Window.cppm
module_src/Bount/Event/: Dispatcher.cpp  Manager.cpp
module_src/Bount/Graphics/: Layer.cpp  Mesh.cpp  Shader.cpp  Subsystem.cpp
module_src/Bount/Window/: Subsystem.cpp
src/Bount/GL/: Event.cpp  Layer.cpp  Mesh.cpp  Placeholder.cpp  Shader.cpp  Subsystem.cpp  System.cpp  Window.cpp
src/Bount/Window/: Subsystem.cpp
